--- a/component/Header/Header.css
+++ b/component/Header/Header.css
@@ -3,7 +3,7 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
