--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -8,8 +11,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100vw;
   
 }
+
+
+
+
 
 a {
   font-weight: 500;
@@ -20,14 +28,7 @@ a:hover {
   color: #747bff;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  
-}
+
 
 h1 {
   font-size: 3.2em;
@@ -54,8 +55,4 @@ button:focus-visible {
 }
 
 
-.main-content {
-  width: 100%;
-  
-  
-}
+
